--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,23 +4,25 @@ spring.application.name=TaskManagement
 spring.datasource.username=root
 spring.datasource.password=test
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management
-Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 # JWT Configuration
 # =======================================================
 jwt.secret=JWT_SECRET
-jwt.expiration=3600000 # 1 hour in milliseconds
+jwt.expiration=3600000 # 1 hour in milliseconds`
 jwt.refreshExpiration=86400000 # 24 hours in milliseconds
 
 # EmailSender
 # =======================================================
-spring.mail.host=gangadharhosamani050.gmail.com
+spring.mail.host=smpt.gmail.com`
 spring.mail.port=587
-spring.mail.username=gangadharhosamani050@.gmail.com
+spring.mail.username=gangadharhosamani050@gmail.com
 spring.mail.password=QWERTYasdf@050
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
